Replace tool buttons with new options

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
         <footer class="controls">
             <div class="tool-row">
-                <button class="tool-btn active" data-tool="slap">👋 Slap</button>
-                <button class="tool-btn" data-tool="pillow">🛏 Pillow</button>
-                <button class="tool-btn" data-tool="water">💧 Water</button>
-                <button class="tool-btn" data-tool="mega">💥 Mega Hit</button>
+                <button class="tool-btn active" data-tool="slap">👊 Punch</button>
+                <button class="tool-btn" data-tool="pillow">🦯 Bat</button>
+                <button class="tool-btn" data-tool="water">🔪 Knife</button>
+                <button class="tool-btn" data-tool="mega">🔫 Gun</button>
             </div>
             <div class="bottom-row">
                 <button id="reset-btn" class="reset-btn">Reset San</button>
