--- a/index.html
+++ b/index.html
@@ -24,8 +24,15 @@
                         <div class="eye right"></div>
                         <div class="mouth"></div>
                     </div>
-                    <div class="body"></div>
+
+                    <div class="body">
+                        <div class="arm left"></div>
+                        <div class="arm right"></div>
+                        <div class="leg left"></div>
+                        <div class="leg right"></div>
+                    </div>
                 </div>
+
                 <div class="speech" id="speech">Tap me if you are mad…</div>
             </div>
         </main>
@@ -36,7 +43,13 @@
                 <button class="tool-btn" data-tool="bat">🦯 Bat</button>
                 <button class="tool-btn" data-tool="knife">🔪 Knife</button>
                 <button class="tool-btn" data-tool="gun">🔫 Gun</button>
+                <button class="tool-btn" data-tool="tomato">🍅 Tomato</button>
             </div>
+
+            <div class="audio-row">
+                <button class="audio-btn" id="mute-btn" aria-pressed="false">🔊 Sound: ON</button>
+            </div>
+
             <div class="bottom-row">
                 <button id="reset-btn" class="reset-btn">Reset San</button>
             </div>
@@ -46,3 +59,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
