--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header class="hud">
       <div class="hud-top">
         <div class="app-title">Angry At San</div>
+
         <button class="icon-btn" id="mute-btn" aria-pressed="false" aria-label="Toggle sound">
           <span class="icon">🔊</span>
           <span class="label">Sound</span>
@@ -46,6 +47,7 @@
             </div>
           </div>
 
+          <!-- Message box (speech) -->
           <div class="speech" id="speech">Select a tool and tap on San.</div>
         </div>
       </section>
@@ -67,8 +69,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-    <script src="script.js"></script>
-</body>
-</html>
-
