--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
               <div class="leg right"></div>
             </div>
           </div>
-
-          <!-- Message box (speech) -->
-          <div class="speech" id="speech">Select a tool and tap on San.</div>
         </div>
+
+        <!-- iOS-style toast message (always visible) -->
+        <div class="speech" id="speech" aria-live="polite">Select a tool and tap on San.</div>
       </section>
     </main>
 
