--- a/index.html
+++ b/index.html
@@ -48,7 +48,24 @@
           </div>
         </div>
 
-        <!-- iOS-style toast message (always visible) -->
+        <!-- PURE CSS TABBY CAT (bottom-left) -->
+        <div class="css-cat" id="cssCat" aria-hidden="true">
+          <div class="css-cat__ear css-cat__ear--left"></div>
+          <div class="css-cat__ear css-cat__ear--right"></div>
+
+          <div class="css-cat__face">
+            <div class="css-cat__eye css-cat__eye--left"></div>
+            <div class="css-cat__eye css-cat__eye--right"></div>
+
+            <div class="css-cat__nose"></div>
+            <div class="css-cat__mouth"></div>
+
+            <div class="css-cat__whiskers css-cat__whiskers--left"></div>
+            <div class="css-cat__whiskers css-cat__whiskers--right"></div>
+          </div>
+        </div>
+
+        <!-- iOS toast message -->
         <div class="speech" id="speech" aria-live="polite">Select a tool and tap on San.</div>
       </section>
     </main>
