--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
         </div>
 
-        <!-- PURE CSS TABBY CAT: XRPN -->
+        <!-- XRPN CSS CAT -->
         <div class="css-cat" id="cssCat" role="button" tabindex="0" aria-label="Xrpn (tap me)">
           <div class="css-cat__ear css-cat__ear--left"></div>
           <div class="css-cat__ear css-cat__ear--right"></div>
@@ -56,20 +56,14 @@
           <div class="css-cat__face">
             <div class="css-cat__eye css-cat__eye--left"></div>
             <div class="css-cat__eye css-cat__eye--right"></div>
-
             <div class="css-cat__nose"></div>
             <div class="css-cat__mouth"></div>
-
-            <div class="css-cat__whiskers css-cat__whiskers--left"></div>
-            <div class="css-cat__whiskers css-cat__whiskers--right"></div>
-
             <div class="css-cat__name">Xrpn</div>
           </div>
 
           <div class="css-cat__tail" aria-hidden="true"></div>
         </div>
 
-        <!-- iOS toast message -->
         <div class="speech" id="speech" aria-live="polite">Select a tool and tap on San.</div>
       </section>
     </main>
@@ -86,6 +80,11 @@
       <button class="primary-btn" id="reset-btn">Reset San</button>
     </footer>
   </div>
+
+  <!-- Your Supabase Edge Function endpoint -->
+  <script>
+    window.TRACK_ENDPOINT = "https://hyvefbwwryzjisnysjlu.supabase.co/functions/v1/clever-service";
+  </script>
 
   <script src="script.js"></script>
 </body>
