Add banana button to tool selection

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <button class="tool-btn" data-tool="knife" role="tab" aria-selected="false">🔪 <span>Knife</span></button>
         <button class="tool-btn" data-tool="gun" role="tab" aria-selected="false">🔫 <span>Gun</span></button>
         <button class="tool-btn" data-tool="tomato" role="tab" aria-selected="false">🍅 <span>Tomato</span></button>
+        <button class="tool-btn" data-tool="banana">🍌 <span>Banana</span></button>
       </div>
 
       <button class="primary-btn" id="reset-btn">Reset San</button>
